tests/ui/hygiene/generate-mod.stderr
error[E0412]: cannot find type `FromOutside` in this scope
  --> $DIR/generate-mod.rs:9:18
   |
LL |         type A = $FromOutside; // `FromOutside` shouldn't be available from here
   |                  ^^^^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `Outer` in this scope
  --> $DIR/generate-mod.rs:11:22
   |
LL |         type Inner = $Outer; // `Outer` shouldn't be available from here
   |                      ^^^^^^ not found in this scope

error[E0412]: cannot find type `FromOutside` in this scope
  --> $DIR/generate-mod.rs:21:18
   |
LL |         type A = FromOutside;
   |                  ^^^^^^^^^^^ not found in this scope
...
LL |     genmod_transparent!();
   |     --------------------- in this macro invocation
   |
   = note: this error originates in the macro `genmod_transparent` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0412]: cannot find type `Outer` in this scope
  --> $DIR/generate-mod.rs:22:22
   |
LL |         type Inner = Outer;
   |                      ^^^^^ not found in this scope
...
LL |     genmod_transparent!();
   |     --------------------- in this macro invocation
   |
   = note: this error originates in the macro `genmod_transparent` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0412]: cannot find type `FromOutside` in this scope
  --> $DIR/generate-mod.rs:30:18
   |
LL |         type A = FromOutside;
   |                  ^^^^^^^^^^^ not found in this scope
...
LL |     genmod_legacy!();
   |     ---------------- in this macro invocation
   |
   = note: this error originates in the macro `genmod_legacy` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0412]: cannot find type `Outer` in this scope
  --> $DIR/generate-mod.rs:31:22
   |
LL |         type Inner = Outer;
   |                      ^^^^^ not found in this scope
...
LL |     genmod_legacy!();
   |     ---------------- in this macro invocation
   |
   = note: this error originates in the macro `genmod_legacy` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0412`.
